add as_tibble.tbl_tree to prevent as_tibble from stripping class from tbl_tree.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(as.phylo,tbl_tree)
 S3method(as.phylo,treedata)
 S3method(as.treedata,tbl_tree)
 S3method(as_tibble,phylo)
+S3method(as_tibble,tbl_tree)
 S3method(as_tibble,treedata)
 S3method(child,tbl_tree)
 S3method(filter,ggtree)
